--- a/window.html
+++ b/window.html
@@ -4,52 +4,30 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <title>Tab Organizer</title>
 
-    <script src="lib/Platform.js"></script>
-    <script src="lib/Options.js"></script>
-    <script>
-        "use strict";
-        /*global Options */
+    <script src="/lib/Platform.js"></script>
+    <script src="/lib/Options.js"></script>
+    <script src="/themes/color-sync.js"></script>
 
-        (function () {
-            var link = document.createElement("link");
-            link.rel = "stylesheet";
-            link.type = "text/css";
-
-            function href(value) {
-                link.href = "themes/" + value + ".css";
-            }
-            href(Options.get("color.theme"));
-
-            Options.addEventListener("change", function (event) {
-                if (event.name === "color.theme") {
-                    href(event.value);
-                }
-            }, true);
-
-            document.head.appendChild(link);
-        }());
-    </script>
-
-    <link rel="stylesheet" type="text/css" href="lib/Options.css" />
-    <link rel="stylesheet" type="text/css" href="lib/UI%20Helper.css" />
-    <link rel="stylesheet" type="text/css" href="window.css" />
+    <link rel="stylesheet" type="text/css" href="/lib/Options.css" />
+    <link rel="stylesheet" type="text/css" href="/lib/UI%20Helper.css" />
+    <link rel="stylesheet" type="text/css" href="/window.css" />
 </head>
 <body>
-    <script src="lib/Undo.js"></script>
-    <script src="lib/Array.js"></script>
-    <script src="lib/Global%20Helper.js"></script>
-    <script src="lib/UI%20Helper.js"></script>
-    <!--<script src="lib/Parser.js"></script>-->
-    <script src="lib/Event%20Helper.js"></script>
-    <script src="lib/Queue.js"></script>
-    <script src="Tab%20Organizer.js"></script>
+    <script src="/lib/Undo.js"></script>
+    <script src="/lib/Array.js"></script>
+    <script src="/lib/Global%20Helper.js"></script>
+    <script src="/lib/UI%20Helper.js"></script>
+    <!--<script src="/lib/Parser.js"></script>-->
+    <script src="/lib/Event%20Helper.js"></script>
+    <script src="/lib/Queue.js"></script>
+    <script src="/Tab%20Organizer.js"></script>
 
-    <script src="lib/Analytics.js"></script>
+    <script src="/lib/Analytics.js"></script>
 
     <!--**
         *  This is to make it easier to take screenshots when the UI changes.
         *-->
     <!--<script src="http://documentation.tab-organizer.googlecode.com/hg/screenshot.js"></script>-->
-    <script src="window.js"></script>
+    <script src="/window.js"></script>
 </body>
 </html>
