--- a/options.html
+++ b/options.html
@@ -3,7 +3,9 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
         <title>Tab Organizer Options</title>
-        <link rel="stylesheet" type="text/css" href="lib/Options.css" />
+
+        <link rel="stylesheet" type="text/css" href="/lib/Options.css" />
+
         <style type="text/css">
             .align-right {
                 text-align: right !important;
@@ -63,13 +65,13 @@
                 </table>
             </div>
         </div>-->
-        <script src="lib/Platform.js"></script>
-        <script src="lib/Options.js"></script>
-        <script src="lib/UI%20Helper.js"></script>
-        <script src="lib/Array.js"></script>
-        <script src="lib/Global%20Helper.js"></script>
+        <script src="/lib/Platform.js"></script>
+        <script src="/lib/Options.js"></script>
+        <script src="/lib/UI%20Helper.js"></script>
+        <script src="/lib/Array.js"></script>
+        <script src="/lib/Global%20Helper.js"></script>
 
-        <script src="lib/Analytics.js"></script>
+        <script src="/lib/Analytics.js"></script>
         <script>
             "use strict";
             /*global Options, UI */
@@ -132,7 +134,7 @@
                             //element.style.margin = "0px";
                             //element.style.padding = "0px";
                             element.style.marginTop = "10px";
-                            element.src = "themes/window-viewer.html";
+                            element.src = "/themes/window-viewer.html";
                         }));
                     //});
                     /*container.input("dropdown-list", {
@@ -545,7 +547,7 @@
                     container.group(function (container) {
                         container.input("dropdown-list", {
                             option: "tabs.close.location",
-                            text: "Show the <img src='images/button-close.png' alt='close' /> button on the ",
+                            text: "Show the <img src='/images/button-close.png' alt='close' /> button on the ",
                             list: [{
                                 value: "right",
                                 text: "right"
@@ -725,7 +727,7 @@
 
     /*!
                                         element.appendChild(UI.create("img", function (element) {
-                                            element.src = "images/button-close.png";
+                                            element.src = "/images/button-close.png";
 
                                             element.addEventListener("click", function () {
                                                 favorites.set(info.url, null);
