Changing "Options.addEventListener" to "Options.event.addListener" Changing "Options.removeEventListener" to "Options.event.removeListener" Changing "Options.triggerEvent" to "Options.event.trigger"

--- a/background.html
+++ b/background.html
@@ -212,7 +212,7 @@
             Platform.icon.setPopup({ popup: "window.html" });
         }
 
-        Options.addEventListener("change", function (event) {
+        Options.event.addListener("change", function (event) {
             switch (event.name) {
             case "counter.reset.time.hour": //* FALLTHRU
             case "counter.reset.time.minute":
